Fix contrast rating on button

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -47,7 +47,7 @@ button, .button {
   border-radius: $border-radius;
   width: fit-content;
   border: none;
-  color: $primary-color-dark;
+  color: $text-color-primary;
   background-color: $primary-color-light;
   
   font-weight: bold;
